--- a/Hoof/Views/Hunt/MyHunts.cshtml
+++ b/Hoof/Views/Hunt/MyHunts.cshtml
@@ -136,7 +136,8 @@
                             Rodzaj zwierzyny: @Html.DropDownList("Wybierz rodzaj zwierzyny", new List<SelectListItem>
                                               {
                                                   new SelectListItem {Text = "", Value = "-1"},
-                                                  new SelectListItem {Text = "Gruba", Value = "1"}
+                                                  new SelectListItem {Text = "Gruba", Value = "1"},
+                                                  new SelectListItem {Text = "Drobna", Value = "2"}
                                               }, new { @class = "form-control" , id = "gameTypeSelect"})
                         </div>
                     </div>
