--- a/Hoof/Views/Report/Index.cshtml
+++ b/Hoof/Views/Report/Index.cshtml
@@ -18,4 +18,4 @@
 
 <br />
 
-<p>Pobierz meldunek za okres od 01/04/@(DateTime.Today.Year - 1) do <input id="dateTo"> <button class="btn btn-default" id="showReport">Pokaż</button></p>
+<p>Pobierz meldunek za okres od 01/04/@(DateTime.Today.Year - 1) do <input id="dateTo" value="@DateTime.Today.ToString("dd/MM/yyyy")"> <button class="btn btn-default" id="showReport">Pokaż</button></p>
