--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("Wszystkie odłowy", "Index", "Caught")</li>
-                            <li>@Html.ActionLink("Moje odłowy", "MyCaughts", "Caught")</li>
+                            <li>@Html.ActionLink("Wszystkie odłowy", "Index", "Catch")</li>
+                            <li>@Html.ActionLink("Moje odłowy", "MyCaughts", "Catch")</li>
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Ubytki", "Index", "Loss")</li>
